# fastdfs_docker

./: Dockerfile  README.md  storage.sh  tracker.sh  tracker_storage.sh
package/: fastdfs.sh  fastdfs_multi.sh
package/client_demo/: CMakeLists.txt  FastDFSClient.cpp  fastdfs_client.cpp  fastdfs_client.h  main.cpp
package/fdfs/: client.conf  http.conf  mod_fastdfs.conf  storage.conf  storage_ids.conf
package/nginx/conf/: nginx.conf
package/store_path/data/: .data_init_flag  .fastdfs_vars  .tracker_status
